--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ai-resource-craft</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Loongson EduGen龙架构智能教育资源平台</title>
+    <meta name="description" content="Loongson EduGen龙架构智能教育资源平台" />
+    <meta name="author" content="Loongson EduGen" />
 
-    <meta property="og:title" content="ai-resource-craft" />
+    <meta property="og:title" content="Loongson EduGen龙架构智能教育资源平台" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/img/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/src/assets/img/logo.png" />
   </head>
 
   <body>
